crates/synapse-core/tests/snapshots/reflex_types__reflex_aim_axis_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexAimAxis\", \"snapshot\", ReflexAimAxis::YOnly)?"
---
"y_only"
