crates/synapse-core/tests/snapshots/reflex_types__reflex_button_target_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexButtonTarget\", \"snapshot\", ReflexButtonTarget::Pad\n{ pad: 1, button: PadButton::Rb, },)?"
---
{
  "kind": "pad",
  "pad": 1,
  "button": "rb"
}
