crates/synapse-core/tests/snapshots/reflex_types__reflex_lifetime_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexLifetime\", \"snapshot\", full_lifetime())?"
---
{
  "kind": "until_event",
  "filter": {
    "op": "kind",
    "kind": "entity_disappeared"
  }
}
