crates/synapse-core/tests/snapshots/reflex_types__reflex_registration_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexRegistration\", \"snapshot\", full_registration())?"
---
{
  "id": "reflex-fully-populated",
  "kind": {
    "kind": "on_event",
    "when": {
      "op": "and",
      "args": [
        {
          "op": "kind",
          "kind": "hud_value_changed"
        },
        {
          "op": "source",
          "source": "perception_hud"
        },
        {
          "op": "data",
          "path": "/field",
          "predicate": {
            "op": "eq",
            "value": "hp"
          }
        },
        {
          "op": "data",
          "path": "/new",
          "predicate": {
            "op": "lt",
            "value": 20
          }
        }
      ]
    },
    "then": {
      "kind": "actions",
      "actions": [
        {
          "kind": "key_press",
          "key": {
            "code": {
              "kind": "named",
              "value": "e"
            },
            "use_scancode": false
          },
          "hold_ms": 30,
          "backend": "software"
        },
        {
          "kind": "mouse_button",
          "button": "left",
          "action": "press",
          "hold_ms": 16,
          "backend": "software"
        }
      ]
    },
    "debounce_ms": 250
  },
  "priority": 900,
  "lifetime": {
    "kind": "until_event",
    "filter": {
      "op": "kind",
      "kind": "entity_disappeared"
    }
  },
  "exclusive": true
}
