crates/synapse-core/tests/snapshots/reflex_types__reflex_state_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexState\", \"snapshot\", ReflexState::Starved)?"
---
"starved"
