crates/synapse-core/tests/snapshots/reflex_types__reflex_then_round_trip.snap
---
source: crates/synapse-core/tests/reflex_types.rs
expression: "round_trip(\"ReflexThen\", \"snapshot\", full_then())?"
---
{
  "kind": "actions",
  "actions": [
    {
      "kind": "key_press",
      "key": {
        "code": {
          "kind": "named",
          "value": "e"
        },
        "use_scancode": false
      },
      "hold_ms": 30,
      "backend": "software"
    },
    {
      "kind": "mouse_button",
      "button": "left",
      "action": "press",
      "hold_ms": 16,
      "backend": "software"
    }
  ]
}
